--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -13,6 +13,48 @@
     <title>Document</title>
   </head>
   <body>
+    <nav class="navbar sticky-top bg-primary-subtle navbar-expand-md">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">MUSIC LOVER</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarScroll"
+          aria-controls="navbarScroll"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarScroll">
+          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html"
+                >HOME</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="./latest_news.html"
+                >ULTIMAS NOTICIAS</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="./reviews.html"
+                >ENTREVISTAS</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
