--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar sticky-top bg-primary-subtle navbar-expand-md">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">MUSIC LOVER</a>
+        <a class="navbar-brand mx-5" href="#">MUSIC LOVER</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -30,13 +30,13 @@
         <div class="collapse navbar-collapse" id="navbarScroll">
           <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html"
+              <a class="nav-link" aria-current="page" href="../index.html"
                 >HOME</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link"
                 aria-current="page"
                 href="./latest_news.html"
                 >ULTIMAS NOTICIAS</a
@@ -44,7 +44,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link active fw-bold text-primary-emphasis"
                 aria-current="page"
                 href="./reviews.html"
                 >ENTREVISTAS</a
