--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MUSIC LOVE</title>
-    <link
-      rel="shortcut icon"
-      href="../src/img/favico.png"
-      type="image/x-icon"
-    />
-
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
+    />
     <link rel="stylesheet" href="./styles/styles.css" />
+    <title>MUSIC LOVE</title>
+    <link
+      rel="shortcut icon"
+      href="../src/img/favico.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="banner bg-primary p-4">
@@ -31,52 +38,19 @@
         </div>
       </div>
     </div>
-    <nav class="navbar sticky-top bg-primary-subtle navbar-expand-md">
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarScroll"
-          aria-controls="navbarScroll"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarScroll">
-          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
-            <li class="nav-item">
-              <a
-                class="nav-link active fw-bold text-primary-emphasis"
-                aria-current="page"
-                href="index.html"
-                >HOME</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="./pages/latest_news.html"
-                >ULTIMAS NOTICIAS</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="./pages/reviews.html"
-                >ENTREVISTAS</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
+    
+    <nav>
+      <ul class="topnav text-center justify-content-center">
+        <li><a class="active" href="index.html">HOME</a></li>
+        <li><a href="./pages/latest_news.html">ULTIMAS NOTICIAS</a></li>
+        <li><a href="./pages/reviews.html">ENTREVISTAS</a></li>
+        <li><a href="./pages/reviews.html">PROXIMOS CONCIERTOS</a></li>
+        <li><a href="#">CONTACTO</a></li>
+      </ul>
     </nav>
 
     <div class="container">
-      <div class="row d-flex mb-5">
+      <div class="row d-flex mb-4">
         <!-- carrousel -->
         <div id="carouselCaptions" class="carousel slide carousel-fade mt-1">
           <div class="carousel-indicators">
@@ -146,6 +120,9 @@
       </div>
 
       <div class="row d-flex">
+        <div class="mb-4">
+          <h2>NOVEDADES</h2>
+        </div>
         <section class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
           <div class="notice">
             <img
@@ -166,6 +143,7 @@
               colombianos en el país. Finalmente, terminó la especulación para
               su base de fanáticos en Argentina.
             </p>
+            <span><button class="btn btn-primary">+ INFO</button></span>
           </div>
         </section>
         <section class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
@@ -186,6 +164,7 @@
               está celebrando en Benidorm este fin de semana, un adelanto de lo
               que será su próximo single: Las babys.
             </p>
+            <span><button class="btn btn-primary">+ INFO</button></span>
           </div>
         </section>
         <section class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
@@ -203,6 +182,25 @@
       </div>
     </div>
 
+    <div class="row footer mt-5">
+      <footer>
+        <div class="social">
+          <a href="#"><i class="icon ion-social-instagram"></i></a
+          ><a href="#"><i class="icon ion-social-snapchat"></i></a
+          ><a href="#"><i class="icon ion-social-twitter"></i></a
+          ><a href="#"><i class="icon ion-social-facebook"></i></a>
+        </div>
+        <ul class="list-inline">
+          <li class="list-inline-item"><a href="#">Home</a></li>
+          <li class="list-inline-item"><a href="#">Ultimas noticias</a></li>
+          <li class="list-inline-item"><a href="#">Entrevistas</a></li>
+          <li class="list-inline-item"><a href="#">Proximos conciertos</a></li>
+          <li class="list-inline-item"><a href="#">Contacto</a></li>
+        </ul>
+        <p class="copyright">PROYECTO FINAL CODER © 2023</p>
+      </footer>
+    </div>
+    
     <!-- scripts de bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
