--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -9,51 +9,63 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
+    />
     <link rel="stylesheet" href="../styles/styles.css" />
-    <title>Document</title>
+    <title>MUSIC LOVE</title>
+    <link
+      rel="shortcut icon"
+      href="../../src/img/favico.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
-    <nav class="navbar sticky-top bg-primary-subtle navbar-expand-md">
-      <div class="container-fluid">
-        <a class="navbar-brand mx-5" href="#">MUSIC LOVER</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarScroll"
-          aria-controls="navbarScroll"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarScroll">
-          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../index.html"
-                >HOME</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="./latest_news.html"
-                >ULTIMAS NOTICIAS</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link active fw-bold text-primary-emphasis"
-                aria-current="page"
-                href="./reviews.html"
-                >ENTREVISTAS</a
-              >
-            </li>
-          </ul>
+    <div class="banner bg-primary p-4">
+      <div class="container justify-content-between">
+        <div class="row d-flex">
+          <div class="col-6 text-start">
+            <p class="text-white fw-bold fs-4">MUSIC LOVER</p>
+          </div>
+          <div class="col-6 text-end">
+            <button class="btn btn-light">SUSCRIBETE</button>
+          </div>
         </div>
       </div>
+    </div>
+    <nav>
+      <ul class="topnav text-center justify-content-center">
+        <li><a href="../index.html">HOME</a></li>
+        <li><a href="./latest_news.html">ULTIMAS NOTICIAS</a></li>
+        <li><a class="active" href="./reviews.html">ENTREVISTAS</a></li>
+        <li><a href="./pages/reviews.html">PROXIMOS CONCIERTOS</a></li>
+        <li><a href="#">CONTACTO</a></li>
+      </ul>
     </nav>
+
+    <div class="row footer mt-5">
+      <footer>
+        <div class="social">
+          <a href="#"><i class="icon ion-social-instagram"></i></a
+          ><a href="#"><i class="icon ion-social-snapchat"></i></a
+          ><a href="#"><i class="icon ion-social-twitter"></i></a
+          ><a href="#"><i class="icon ion-social-facebook"></i></a>
+        </div>
+        <ul class="list-inline">
+          <li class="list-inline-item"><a href="#">Home</a></li>
+          <li class="list-inline-item"><a href="#">Ultimas noticias</a></li>
+          <li class="list-inline-item"><a href="#">Entrevistas</a></li>
+          <li class="list-inline-item"><a href="#">Proximos conciertos</a></li>
+          <li class="list-inline-item"><a href="#">Contacto</a></li>
+        </ul>
+        <p class="copyright">PROYECTO FINAL CODER © 2023</p>
+      </footer>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
