diseño responsive de la page

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MUSIC LOVE</title>
+    <link
+      rel="shortcut icon"
+      href="../src/img/favico.png"
+      type="image/x-icon"
+    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,12 +25,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
     />
     <link rel="stylesheet" href="./styles/styles.css" />
-    <title>MUSIC LOVE</title>
-    <link
-      rel="shortcut icon"
-      href="../src/img/favico.png"
-      type="image/x-icon"
-    />
   </head>
   <body>
     <div class="banner bg-primary p-4">
@@ -38,7 +39,6 @@
         </div>
       </div>
     </div>
-    
     <nav>
       <ul class="topnav text-center justify-content-center">
         <li><a class="active" href="index.html">HOME</a></li>
@@ -123,28 +123,26 @@
         <div class="mb-4">
           <h2>NOVEDADES</h2>
         </div>
-        <section class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
-          <div class="notice">
-            <img
-              src="./img/morat_1.jpg"
-              alt="MORAT"
-              class="notice_img rounded img-fluid"
-            />
-            <h4 class="notice_title mt-2">
-              MORAT ANUNCIA NUEVAS FECHAS PARA ARGENTINA
-            </h4>
-            <p class="notice_body">
-              Tras el lanzamiento a finales del año pasado de su cuarto disco de
-              estudio, la banda viene subiéndose a escenarios de toda
-              Latinoamérica y España para acercarles interpretaciones en vivo de
-              su material nuevo a los miles de fans que vienen cosechando desde
-              sus comienzos hace unos ocho años. En ese contexto, sus seguidores
-              locales esperaban la confirmación de un nuevo show de los
-              colombianos en el país. Finalmente, terminó la especulación para
-              su base de fanáticos en Argentina.
-            </p>
-            <span><button class="btn btn-primary">+ INFO</button></span>
-          </div>
+        <section class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 notice">
+          <img
+            src="./img/morat_1.jpg"
+            alt="MORAT"
+            class="notice_img rounded img-fluid"
+          />
+          <h4 class="notice_title mt-2">
+            MORAT ANUNCIA NUEVAS FECHAS PARA ARGENTINA
+          </h4>
+          <p class="notice_body">
+            Tras el lanzamiento a finales del año pasado de su cuarto disco de
+            estudio, la banda viene subiéndose a escenarios de toda
+            Latinoamérica y España para acercarles interpretaciones en vivo de
+            su material nuevo a los miles de fans que vienen cosechando desde
+            sus comienzos hace unos ocho años. En ese contexto, sus seguidores
+            locales esperaban la confirmación de un nuevo show de los
+            colombianos en el país. Finalmente, terminó la especulación para su
+            base de fanáticos en Argentina.
+          </p>
+          <button class="btn btn-primary">+ INFO</button>
         </section>
         <section class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
           <div class="notice">
@@ -200,7 +198,6 @@
         <p class="copyright">PROYECTO FINAL CODER © 2023</p>
       </footer>
     </div>
-    
     <!-- scripts de bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
