--- a/src/pages/latest_news.html
+++ b/src/pages/latest_news.html
@@ -30,14 +30,15 @@
       <div class="container justify-content-between">
         <div class="row d-flex">
           <div class="col-6 text-start">
-            <p class="text-white fw-bold fs-4">MUSIC LOVER</p>
+            <p class="text-white fst-bold fs-4 name-page">MUSIC LOVER</p>
           </div>
           <div class="col-6 text-end">
-            <button class="btn btn-light">SUSCRIBETE</button>
+            <button class="btn btn-sm btn-light">SUSCRIBETE</button>
           </div>
         </div>
       </div>
     </div>
+
     <nav>
       <ul class="topnav text-center justify-content-center">
         <li><a href="../index.html">HOME</a></li>
@@ -50,6 +51,210 @@
       </ul>
     </nav>
 
+    <div class="container">
+      <section class="row d-flex principal_notice justify-content-center mt-5">
+        <div class="col-xl-3 col-lg-4 col-md-12 col-sm-12 col-12 principal_img">
+          <img
+            src="../img/los_del_espacio.webp"
+            alt="Los del espacio"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12 col-11">
+          <h5>"LOS DEL ESPACIO", máxima tendencia nacional en Youtube</h5>
+          <p>
+            El hit que reúne a grandes figuras de la escena urbana como Duki,
+            María Becerra, Tiago PZK, Lit Killah, Emilia, Rusherking, FMK y Big
+            One, celebra la actualidad de una escena urbana argentina cada vez
+            más potente y a la vez reivindica el camino hecho por la productora
+            Anestesia Audiovisual, que logró un nuevo hito con sus 74 millones
+            de reproducciones en YouTube donde conserva el primer puesto entre
+            las tendencias nacionales.
+          </p>
+          <button class="btn btn-sm btn-sm btn-primary">+ INFO</button>
+        </div>
+        <div
+          class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 mt-2 text-center"
+        >
+          <div class="video-container">
+            <iframe
+              src="https://www.youtube.com/embed/eBSQug_xtwc"
+              title="Los Del Espacio - LIT killah, Duki, Emilia, Tiago PZK, FMK, Rusherking, Maria Becerra, Big One"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="container mt-5">
+      <section class="row d-flex notices justify-content-center">
+        <div
+          class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 mt-4 notice_container"
+        >
+          <div class="secondary_img">
+            <img
+              src="../img/taylor_1.jpg"
+              alt="taylor"
+              class="img-fluid notice-image"
+            />
+          </div>
+          <p class="text-success fst-italic m-1">conciertos</p>
+          <h6>TAYLOR SWIFT CONFIRMA SUS FECHAS PARA ARGENTINA</h6>
+          <button
+            type="button"
+            class="btn btn-sm btn-primary"
+            data-bs-toggle="button"
+          >
+            -> Leer mas
+          </button>
+        </div>
+        <div
+          class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 mt-4 notice_container"
+        >
+          <div class="secondary_img">
+            <img src="../img/rosalia_2.jpg" alt="rosalia" class="img-fluid" />
+          </div>
+          <p class="text-success fst-italic m-1">canciones</p>
+          <h6>ROSALIA ESTRENA SU NUEVO TEMA "SUYA"</h6>
+          <button
+            type="button"
+            class="btn btn-sm btn-primary"
+            data-bs-toggle="button"
+          >
+            -> Leer mas
+          </button>
+        </div>
+        <div
+          class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 mt-4 notice_container"
+        >
+          <div class="secondary_img">
+            <img
+              src="../img/sin_bandera_1.webp"
+              alt="sin bandera"
+              class="img-fluid"
+            />
+          </div>
+          <p class="text-success fst-italic m-1">conciertos</p>
+          <h6>SIN BANDERA AGOTA TODAS SUS ENTRADAS EN 24 HS</h6>
+          <button
+            type="button"
+            class="btn btn-sm btn-primary"
+            data-bs-toggle="button"
+          >
+            -> Leer mas
+          </button>
+        </div>
+        <div
+          class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 mt-4 notice_container"
+        >
+          <div class="secondary_img">
+            <img
+              src="../img/foo_Fighters_1.jpg"
+              alt="foo Fighters"
+              class="img-fluid"
+            />
+          </div>
+          <p class="text-success fst-italic m-1">álbum</p>
+          <h6>FOO FIGHTERS ESTRENA SU NUEVO ALBUM</h6>
+          <button
+            type="button"
+            class="btn btn-sm btn-primary"
+            data-bs-toggle="button"
+          >
+            -> Leer mas
+          </button>
+        </div>
+        <div
+          class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 mt-4 notice_container"
+        >
+          <div class="secondary_img">
+            <img
+              src="../img/nicki_nicole_1.webp"
+              alt="foo Fighters"
+              class="img-fluid"
+            />
+          </div>
+          <p class="text-success fst-italic m-1">conciertos</p>
+          <h6>NICKI NICOLE AGOTÓ 3 MOVISTAR ARENA</h6>
+          <button
+            type="button"
+            class="btn btn-sm btn-primary"
+            data-bs-toggle="button"
+          >
+            -> Leer mas
+          </button>
+        </div>
+        <div
+          class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 mt-4 notice_container"
+        >
+          <div class="secondary_img">
+            <img
+              src="../img/coldplay_1.avif"
+              alt="foo Fighters"
+              class="img-fluid"
+            />
+          </div>
+          <p class="text-success fst-italic m-1">noticias</p>
+          <h6>EL EMOTIVO HOMENAJE DE COLDPLAY A ELTON JHON TRAS SU RETIRO</h6>
+          <button
+            type="button"
+            class="btn btn-sm btn-primary"
+            data-bs-toggle="button"
+          >
+            -> Leer mas
+          </button>
+        </div>
+        <div
+          class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 mt-4 notice_container"
+        >
+          <div class="secondary_img">
+            <img
+              src="../img/maria_becera_1.avif"
+              alt="foo Fighters"
+              class="img-fluid"
+            />
+          </div>
+          <p class="text-success fst-italic m-1">curiosidad</p>
+          <h6>
+            MARIA BECERRA Y EL DETRAS DE ESCENA DE
+            "CORAZON VACIO"
+          </h6>
+          <button
+            type="button"
+            class="btn btn-sm btn-primary"
+            data-bs-toggle="button"
+          >
+            -> Leer mas
+          </button>
+        </div>
+        <div
+        class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 mt-4 notice_container"
+      >
+        <div class="secondary_img">
+          <img
+            src="../img/rauw_alejandro_1.jpg"
+            alt="foo Fighters"
+            class="img-fluid"
+          />
+        </div>
+        <p class="text-success fst-italic m-1">album</p>
+        <h6>
+         RAUW ALEJANDRO PRESENTA "PLAYA SATURNO"
+          SU NUEVO ALBUM
+        </h6>
+        <button
+          type="button"
+          class="btn btn-sm btn-primary"
+          data-bs-toggle="button"
+        >
+          -> Leer mas
+        </button>
+      </div>
+      </section>
+    </div>
     <div class="row footer mt-5">
       <footer>
         <div class="social">
