reoganizado de directorios

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MUSIC LOVE</title>
     <link
       rel="shortcut icon"
-      href="../src/img/favico.png"
+      href="./src/img/favico.png"
       type="image/x-icon"
     />
 
@@ -24,7 +24,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
     />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./src/styles/styles.css" />
   </head>
   <body>
     <div class="banner bg-primary p-4">
@@ -42,9 +42,9 @@
     <nav>
       <ul class="topnav text-center justify-content-center">
         <li><a class="active" href="index.html">HOME</a></li>
-        <li><a href="./pages/latest_news.html">ULTIMAS NOTICIAS</a></li>
-        <li><a href="./pages/reviews.html">ENTREVISTAS</a></li>
-        <li><a href="./pages/reviews.html">PROXIMOS CONCIERTOS</a></li>
+        <li><a href="./src/pages/latest_news.html">ULTIMAS NOTICIAS</a></li>
+        <li><a href="./src/pages/reviews.html">ENTREVISTAS</a></li>
+        <li><a href="./src/pages/concerts.html">PROXIMOS CONCIERTOS</a></li>
         <li><a href="#">CONTACTO</a></li>
       </ul>
     </nav>
@@ -78,21 +78,21 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="./img/the_Weekend_Banner.jpg"
+                src="./src/img/the_Weekend_Banner.jpg"
                 class="d-block w-100"
                 alt="concierto the weekend"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="./img/taylor_banner.jpg"
+                src="./src/img/taylor_banner.jpg"
                 class="d-block w-100"
                 alt="concierto taylor swift"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="./img/tan_bionica_banner.jpg"
+                src="./src/img/tan_bionica_banner.jpg"
                 class="d-block w-100"
                 alt="concierto tan bionica"
               />
@@ -125,7 +125,7 @@
         </div>
         <section class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 notice">
           <img
-            src="./img/morat_1.jpg"
+            src="./src/img/morat_1.jpg"
             alt="MORAT"
             class="notice_img rounded img-fluid"
           />
@@ -147,7 +147,7 @@
         <section class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
           <div class="notice">
             <img
-              src="./img/aitana_1.webp"
+              src="./src/img/aitana_1.webp"
               alt="MORAT"
               class="notice_img rounded img-fluid"
             />
