--- a/src/pages/concerts.html
+++ b/src/pages/concerts.html
@@ -42,11 +42,27 @@
       <ul class="topnav text-center justify-content-center">
         <li><a href="../../index.html">HOME</a></li>
         <li><a href="./latest_news.html">ULTIMAS NOTICIAS</a></li>
-        <li><a class="active" href="./reviews.html">ENTREVISTAS</a></li>
-        <li><a href="./concerts.html">PROXIMOS CONCIERTOS</a></li>
+        <li><a href="./reviews.html">ENTREVISTAS</a></li>
+        <li>
+          <a class="active" href="./concerts.html">PROXIMOS CONCIERTOS</a>
+        </li>
         <li><a href="#">CONTACTO</a></li>
       </ul>
     </nav>
+
+    <div class="container">
+      <div class="alert alert-success" role="alert">
+        <h4 class="alert-heading">PAGINA EN DESARROLO</h4>
+        <p>
+          DEBEN ESTAR TAN EMOCIONADOS COMO YO, ESTA LA DEJO DE INCOGNITA PARA LA
+          PROXIMA ENTREGA
+        </p>
+        <hr />
+        <p class="mb-0">
+          GRACIAS POR LAS CORRECIONES QUE VAN A VENIR CON ESTA ENTREGA
+        </p>
+      </div>
+    </div>
 
     <div class="row footer mt-5">
       <footer>
