--- a/src/pages/latest_news.html
+++ b/src/pages/latest_news.html
@@ -41,12 +41,12 @@
 
     <nav>
       <ul class="topnav text-center justify-content-center">
-        <li><a href="../index.html">HOME</a></li>
+        <li><a href="../../index.html">HOME</a></li>
         <li>
           <a class="active" href="./latest_news.html">ULTIMAS NOTICIAS</a>
         </li>
         <li><a href="./reviews.html">ENTREVISTAS</a></li>
-        <li><a href="./pages/reviews.html">PROXIMOS CONCIERTOS</a></li>
+        <li><a href="./concerts.html">PROXIMOS CONCIERTOS</a></li>
         <li><a href="#">CONTACTO</a></li>
       </ul>
     </nav>
