--- a/src/pages/latest_news.html
+++ b/src/pages/latest_news.html
@@ -52,12 +52,12 @@
     </nav>
 
     <div class="container">
-      <section class="row d-flex principal_notice justify-content-center mt-5">
+      <section class="row d-flex principal_notice justify-content-around mt-5">
         <div class="col-xl-3 col-lg-4 col-md-12 col-sm-12 col-12 principal_img">
           <img
             src="../img/los_del_espacio.webp"
             alt="Los del espacio"
-            class="img-fluid"
+            class="img-fluid mt-2"
           />
         </div>
         <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12 col-11">
@@ -76,7 +76,7 @@
         <div
           class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 mt-2 text-center"
         >
-          <div class="video-container">
+          <div class="video_container mt-2">
             <iframe
               src="https://www.youtube.com/embed/eBSQug_xtwc"
               title="Los Del Espacio - LIT killah, Duki, Emilia, Tiago PZK, FMK, Rusherking, Maria Becerra, Big One"
