--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MUSIC LOVE</title>
-    <link
-      rel="shortcut icon"
-      href="./src/img/favico.png"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="./src/img/favico.png" type="image/x-icon" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -52,7 +48,11 @@
     <div class="container">
       <div class="row d-flex mb-4">
         <!-- carrousel -->
-        <div id="carouselCaptions" class="carousel slide carousel-fade mt-1">
+        <div
+          id="carouselCaptions"
+          class="carousel slide carousel-fade mt-1"
+          data-bs-ride="true"
+        >
           <div class="carousel-indicators">
             <button
               type="button"
@@ -120,8 +120,11 @@
       </div>
 
       <div class="row d-flex">
-        <div class="mb-4">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-5 mb-4">
           <h2>NOVEDADES</h2>
+        </div>
+        <div class="col-xl-9 col-lg-8 col-md-9 col-sm-8 col-7 mb-1">
+          <hr />
         </div>
         <section class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 notice">
           <img
