--- a/src/pages/latest_news.html
+++ b/src/pages/latest_news.html
@@ -52,6 +52,15 @@
     </nav>
 
     <div class="container">
+      <div class="row d-flex mt-5">
+        <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5 col-5">
+          <h4>LO MAS NUEVO</h4>
+        </div>
+        <div class="col-xl-9 col-lg-9 col-md-8 col-sm-7 col-7">
+          <hr />
+        </div>
+      </div>
+
       <section class="row d-flex principal_notice justify-content-around mt-5">
         <div class="col-xl-3 col-lg-4 col-md-12 col-sm-12 col-12 principal_img">
           <img
@@ -87,10 +96,17 @@
           </div>
         </div>
       </section>
-    </div>
 
-    <div class="container mt-5">
-      <section class="row d-flex notices justify-content-center">
+      <div class="row d-flex mt-5">
+        <div class="col-xl-4 col-lg-5 col-md-8 col-sm-8 col-9">
+          <h4>OTRAS NOTICIAS DEL MUNDO</h4>
+        </div>
+        <div class="col-xl-8 col-lg-7 col-md-4 col-sm-4 col-3">
+          <hr />
+        </div>
+      </div>
+
+      <section class="row d-flex notices justify-content-center mt-3">
         <div
           class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 mt-4 notice_container"
         >
@@ -218,10 +234,7 @@
             />
           </div>
           <p class="text-success fst-italic m-1">curiosidad</p>
-          <h6>
-            MARIA BECERRA Y EL DETRAS DE ESCENA DE
-            "CORAZON VACIO"
-          </h6>
+          <h6>MARIA BECERRA Y EL DETRAS DE ESCENA DE "CORAZON VACIO"</h6>
           <button
             type="button"
             class="btn btn-sm btn-primary"
@@ -231,30 +244,28 @@
           </button>
         </div>
         <div
-        class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 mt-4 notice_container"
-      >
-        <div class="secondary_img">
-          <img
-            src="../img/rauw_alejandro_1.jpg"
-            alt="foo Fighters"
-            class="img-fluid"
-          />
-        </div>
-        <p class="text-success fst-italic m-1">album</p>
-        <h6>
-         RAUW ALEJANDRO PRESENTA "PLAYA SATURNO"
-          SU NUEVO ALBUM
-        </h6>
-        <button
-          type="button"
-          class="btn btn-sm btn-primary"
-          data-bs-toggle="button"
+          class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 mt-4 notice_container"
         >
-          -> Leer mas
-        </button>
-      </div>
+          <div class="secondary_img">
+            <img
+              src="../img/rauw_alejandro_1.jpg"
+              alt="foo Fighters"
+              class="img-fluid"
+            />
+          </div>
+          <p class="text-success fst-italic m-1">album</p>
+          <h6>RAUW ALEJANDRO PRESENTA "PLAYA SATURNO" SU NUEVO ALBUM</h6>
+          <button
+            type="button"
+            class="btn btn-sm btn-primary"
+            data-bs-toggle="button"
+          >
+            -> Leer mas
+          </button>
+        </div>
       </section>
     </div>
+
     <div class="row footer mt-5">
       <footer>
         <div class="social">
