reestructuracion de estilos en sass

--- a/src/pages/concerts.html
+++ b/src/pages/concerts.html
@@ -46,7 +46,7 @@
         <li>
           <a class="active" href="./concerts.html">PROXIMOS CONCIERTOS</a>
         </li>
-        <li><a href="#">CONTACTO</a></li>
+        <li><a href="./contact.html">CONTACTO</a></li>
       </ul>
     </nav>
 
