--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -42,9 +42,9 @@
       <ul class="topnav text-center justify-content-center">
         <li><a href="../../index.html">HOME</a></li>
         <li><a href="./latest_news.html">ULTIMAS NOTICIAS</a></li>
-        <li><a class="active" href="./reviews.html">ENTREVISTAS</a></li>
+        <li><a href="./reviews.html">ENTREVISTAS</a></li>
         <li><a href="./concerts.html">PROXIMOS CONCIERTOS</a></li>
-        <li><a href="./contact.html">CONTACTO</a></li>
+        <li><a class="active" href="#">CONTACTO</a></li>
       </ul>
     </nav>
 
