--- a/src/pages/latest_news.html
+++ b/src/pages/latest_news.html
@@ -26,7 +26,7 @@
     />
   </head>
   <body>
-    <div class="banner bg-primary p-4">
+    <div class="banner primary p-4">
       <div class="container justify-content-between">
         <div class="row d-flex">
           <div class="col-6 text-start">
@@ -47,7 +47,7 @@
         </li>
         <li><a href="./reviews.html">ENTREVISTAS</a></li>
         <li><a href="./concerts.html">PROXIMOS CONCIERTOS</a></li>
-        <li><a href="#">CONTACTO</a></li>
+        <li><a href="./contact.html">CONTACTO</a></li>
       </ul>
     </nav>
 
@@ -80,7 +80,7 @@
             de reproducciones en YouTube donde conserva el primer puesto entre
             las tendencias nacionales.
           </p>
-          <button class="btn btn-sm btn-sm btn-primary">+ INFO</button>
+          <button class="button_primary primary">+ INFO</button>
         </div>
         <div
           class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 mt-2 text-center"
@@ -121,7 +121,7 @@
           <h6>TAYLOR SWIFT CONFIRMA SUS FECHAS PARA ARGENTINA</h6>
           <button
             type="button"
-            class="btn btn-sm btn-primary"
+            class="button_secondary secondary"
             data-bs-toggle="button"
           >
             -> Leer mas
@@ -137,7 +137,7 @@
           <h6>ROSALIA ESTRENA SU NUEVO TEMA "SUYA"</h6>
           <button
             type="button"
-            class="btn btn-sm btn-primary"
+            class="button_secondary secondary"
             data-bs-toggle="button"
           >
             -> Leer mas
@@ -157,7 +157,7 @@
           <h6>SIN BANDERA AGOTA TODAS SUS ENTRADAS EN 24 HS</h6>
           <button
             type="button"
-            class="btn btn-sm btn-primary"
+            class="button_secondary secondary"
             data-bs-toggle="button"
           >
             -> Leer mas
@@ -177,7 +177,7 @@
           <h6>FOO FIGHTERS ESTRENA SU NUEVO ALBUM</h6>
           <button
             type="button"
-            class="btn btn-sm btn-primary"
+            class="button_secondary secondary"
             data-bs-toggle="button"
           >
             -> Leer mas
@@ -197,7 +197,7 @@
           <h6>NICKI NICOLE AGOTÓ 3 MOVISTAR ARENA</h6>
           <button
             type="button"
-            class="btn btn-sm btn-primary"
+            class="button_secondary secondary"
             data-bs-toggle="button"
           >
             -> Leer mas
@@ -217,7 +217,7 @@
           <h6>EL EMOTIVO HOMENAJE DE COLDPLAY A ELTON JHON TRAS SU RETIRO</h6>
           <button
             type="button"
-            class="btn btn-sm btn-primary"
+            class="button_secondary secondary"
             data-bs-toggle="button"
           >
             -> Leer mas
@@ -237,7 +237,7 @@
           <h6>MARIA BECERRA Y EL DETRAS DE ESCENA DE "CORAZON VACIO"</h6>
           <button
             type="button"
-            class="btn btn-sm btn-primary"
+            class="button_secondary secondary"
             data-bs-toggle="button"
           >
             -> Leer mas
@@ -257,7 +257,7 @@
           <h6>RAUW ALEJANDRO PRESENTA "PLAYA SATURNO" SU NUEVO ALBUM</h6>
           <button
             type="button"
-            class="btn btn-sm btn-primary"
+            class="button_secondary secondary"
             data-bs-toggle="button"
           >
             -> Leer mas
