--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li><a href="./src/pages/latest_news.html">ULTIMAS NOTICIAS</a></li>
         <li><a href="./src/pages/reviews.html">ENTREVISTAS</a></li>
         <li><a href="./src/pages/concerts.html">PROXIMOS CONCIERTOS</a></li>
-        <li><a href="#">CONTACTO</a></li>
+        <li><a href="./src/pages/contact.html">CONTACTO</a></li>
       </ul>
     </nav>
 
@@ -145,7 +145,7 @@
             colombianos en el país. Finalmente, terminó la especulación para su
             base de fanáticos en Argentina.
           </p>
-          <button class="btn btn-primary">+ INFO</button>
+          <button class="button_primary primary">+ INFO</button>
         </section>
         <section class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
           <div class="notice">
@@ -165,7 +165,7 @@
               está celebrando en Benidorm este fin de semana, un adelanto de lo
               que será su próximo single: Las babys.
             </p>
-            <span><button class="btn btn-primary">+ INFO</button></span>
+            <button class="button_primary primary">+ INFO</button>
           </div>
         </section>
         <section class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
@@ -201,6 +201,7 @@
         <p class="copyright">PROYECTO FINAL CODER © 2023</p>
       </footer>
     </div>
+    
     <!-- scripts de bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
