pagina de contacto y ajustes de css

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -48,17 +48,52 @@
       </ul>
     </nav>
 
-    <div class="container mt-5">
-      <div class="alert alert-primary" role="alert">
-        <h4 class="alert-heading">PAGINA EN DESARROLO!</h4>
-        <p>
-          DEBEN ESTAR TAN EMOCIONADOS COMO YO, ESTA LA DEJO DE INCOGNITA PARA LA
-          PROXIMA ENTREGA
-        </p>
-        <hr />
-        <p class="mb-0">
-          GRACIAS POR LAS CORRECIONES QUE VAN A VENIR CON ESTA ENTREGA
-        </p>
+    <div class="container mt-4">
+      <h1 class="text-center">Comunicate con nosotros</h1>
+      <div class="row justify-content-center">
+        <div class="col-11 col-sm-11 col-md-8 col-lg-6">
+          <form action="#" method="post" class="mt-4">
+            <input
+              class="form_input"
+              type="text"
+              name="name"
+              id="name"
+              placeholder="Nombre y Apellido"
+            />
+            <input
+              class="form_input"
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Correo electronico"
+            />
+            <input
+              class="form_input"
+              type="text"
+              name="topic"
+              id="topic"
+              placeholder="Asunto"
+            />
+            <input
+              class="form_input"
+              type="tel"
+              name="telphone"
+              id="telphone"
+              placeholder="Telefono (opcional)"
+            />
+            <textarea
+              class="form_input"
+              name="description"
+              id="description"
+              cols="30"
+              rows="10"
+              placeholder="Description"
+            ></textarea>
+            <div class="row ps-3 pe-3">
+              <button class="button_secondary secondary">ENVIAR</button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
 
