--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -48,19 +48,211 @@
       </ul>
     </nav>
 
-    <div class="container mt-5">
-      <div class="alert alert-primary" role="alert">
-        <h4 class="alert-heading">PAGINA EN DESARROLO!</h4>
-        <p>
-          DEBEN ESTAR TAN EMOCIONADOS COMO YO, ESTA LA DEJO DE INCOGNITA PARA LA
-          PROXIMA ENTREGA
-        </p>
-        <hr />
-        <p class="mb-0">
-          GRACIAS POR LAS CORRECIONES QUE VAN A VENIR CON ESTA ENTREGA
-        </p>
+    <article class="container mt-5 article_principal justify-content-center">
+      <h1>Revive la entrevista completa de Rosalía</h1>
+      <p>
+        La cantante ha hablado de su último lanzamiento 'Tuya', su relación con
+        Rauw Alejandro y los secretos de su última gira en la que lleva más de
+        un año y medio recorriendo el mundo. Así ha sido la entrevista completa
+        de Rosalía en 'El Hormiguero'.
+      </p>
+      <iframe
+        src="https://www.youtube.com/embed/vo79D2aTMks"
+        title="Rosalía se sincera sobre las giras - El Hormiguero"
+        alt="Rosalía se sincera sobre las giras - El Hormiguero"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+      <p>
+        La estrella internacional ha presentado en el programa de Pablo Motos su
+        último proyecto titulado 'Tuya' y ha contado las mejores anécdotas de
+        Motomami en su gira por toda Europa. Disfruta de la entrevista de
+        Rosalía en 'El Hormiguero'. La cantante ha llegado con mucha energía al
+        programa de Pablo Motos dónde ha hablado de su última gira en la que
+        lleva inmersa un año y medio por más de 15 países. Rosalía ha explicado
+        lo difícil de la vida del artista. “Es durillo, pero me quedo con la
+        energía del público”, ha asegurado la compositora en 'El Hormiguero'. La
+        invitada ha hablado de su admiración a la cultura japonesa que le ha
+        influenciado en los últimos temas que ha compuesto y que refleja en su
+        forma de vestir en muchas ocasiones. Rosalía ha sacado su último
+        lanzamiento 'Tuya' junto a su pareja Rauw Alejandro. La cantante le ha
+        confesado que “han sobrevivido a un lanzamiento” y ha querido relatar a
+        Pablo Motos cómo fue la petición de mano de Rauw Alejandro. "Me puse a
+        llorar", ha asegurado la cantante al recordar el emocionante momento.
+      </p>
+    </article>
+
+    <article class="container mt-5 article_secondary justify-content-center">
+      <div class="row px-0">
+        <button
+          class="button_primary primary"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapseReviews"
+          aria-expanded="false"
+          aria-controls="collapseReviews"
+        >
+          MAS SEGMENTOS DE LA ENTREVISTA
+        </button>
       </div>
-    </div>
+      <div class="collapse mt-3" id="collapseReviews">
+        <section class="article_secondary_container">
+          <div class="article_secondary_item">
+            <iframe
+              src="https://www.youtube.com/embed/8GbwjdFpFVo"
+              title='Así nació "Tuya", el nuevo éxito de Rosalía'
+              alt='Así nació "Tuya", el nuevo éxito de Rosalía'
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+            <h3>
+              Así nació "Tuya", el nuevo éxito de Rosalía <br /><button
+                class="button_secondary secondary mt-3"
+              >
+                AMPLIAR
+              </button>
+            </h3>
+          </div>
+          <div class="article_secondary_item">
+            <iframe
+              src="https://www.youtube.com/embed/gnvXGGsiKWM"
+              title='La confesión de Rosalía sobre Rauw Alejandro"'
+              alt='La confesión de Rosalía sobre Rauw Alejandro"'
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+            <h3>
+              La confesión de Rosalía sobre Rauw Alejandro<br /><button
+                class="button_secondary secondary mt-3"
+              >
+                AMPLIAR
+              </button>
+            </h3>
+          </div>
+          <div class="article_secondary_item">
+            <iframe
+              src="https://www.youtube.com/embed/-yMoPKPpsB0"
+              title="¿Cuánto sabe Rosalía de japonés?"
+              alt="¿Cuánto sabe Rosalía de japonés?"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+            <h3>
+              ¿Cuánto sabe Rosalía de japonés?<br /><button
+                class="button_secondary secondary mt-3"
+              >
+                AMPLIAR
+              </button>
+            </h3>
+          </div>
+          <div class="article_secondary_item">
+            <iframe
+              src="https://www.youtube.com/embed/UDkbXcCL6sk"
+              title="Lombrices con líquido: Rosalía sorprendida por las Ondas Faraday"
+              alt="Lombrices con líquido: Rosalía sorprendida por las Ondas Faraday"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+            <h3>
+              Lombrices con líquido: Rosalía sorprendida por las Ondas
+              Faraday<br /><button class="button_secondary secondary mt-3">
+                AMPLIAR
+              </button>
+            </h3>
+          </div>
+        </section>
+      </div>
+    </article>
+
+    <article class="container mt-5 article_secondary justify-content-center">
+      <div class="row px-0">
+        <button
+          class="button_primary primary mb-3"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapseMoreReviews"
+          aria-expanded="false"
+          aria-controls="collapseMoreReviews"
+        >
+          MAS ENTREVISTAS ENTRETENIDAS
+        </button>
+      </div>
+      <div class="collapse mt-3" id="collapseMoreReviews">
+        <section class="article_secondary_container">
+          <div class="article_secondary_item">
+            <iframe
+              src="https://www.youtube.com/embed/7E-oFRxWwjw"
+              title="Así surgió la colaboración entre Shakira y Bizarrap"
+              alt="Así surgió la colaboración entre Shakira y Bizarrap"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+            <h3>
+              Así surgió la colaboración entre Shakira y Bizarrap<br /><button
+                class="button_secondary secondary mt-3"
+              >
+                AMPLIAR
+              </button>
+            </h3>
+          </div>
+          <div class="article_secondary_item">
+            <iframe
+              src="https://www.youtube.com/embed/7zqUTThGCp4"
+              title='"Alma", el nuevo disco de Nicki Nicole'
+              alt='"Alma", el nuevo disco de Nicki Nicole'
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+            <h3>
+              "Alma", el nuevo disco de Nicki Nicole<br /><button
+                class="button_secondary secondary mt-3"
+              >
+                AMPLIAR
+              </button>
+            </h3>
+          </div>
+          <div class="article_secondary_item">
+            <iframe
+              src="https://www.youtube.com/embed/orHndWFUqvE"
+              title="¿Se obsesiona Nicki Nicole con los comentarios en redes sociales?"
+              alt="¿Se obsesiona Nicki Nicole con los comentarios en redes sociales?"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+            <h3>
+              ¿Se obsesiona Nicki Nicole con los comentarios en redes
+              sociales?<br /><button class="button_secondary secondary mt-3">
+                AMPLIAR
+              </button>
+            </h3>
+          </div>
+          <div class="article_secondary_item">
+            <iframe
+              src="https://www.youtube.com/embed/ik2FDX_WcTs"
+              title="¿Cómo reaccionaron los padres de Emilia cuando conocieron a Duki?"
+              alt="¿Cómo reaccionaron los padres de Emilia cuando conocieron a Duki?"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+            <h3>
+              ¿Cómo reaccionaron los padres de Emilia cuando conocieron a
+              Duki?<br /><button class="button_secondary secondary mt-3">
+                AMPLIAR
+              </button>
+            </h3>
+          </div>
+        </section>
+      </div>
+    </article>
 
     <div class="row footer mt-5">
       <footer>
