--- a/src/pages/concerts.html
+++ b/src/pages/concerts.html
@@ -50,17 +50,35 @@
       </ul>
     </nav>
 
-    <div class="container mt-5">
-      <div class="alert alert-primary" role="alert">
-        <h4 class="alert-heading">PAGINA EN DESARROLO!</h4>
-        <p>
-          DEBEN ESTAR TAN EMOCIONADOS COMO YO, ESTA LA DEJO DE INCOGNITA PARA LA
-          PROXIMA ENTREGA
-        </p>
-        <hr />
-        <p class="mb-0">
-          GRACIAS POR LAS CORRECIONES QUE VAN A VENIR CON ESTA ENTREGA
-        </p>
+    <div class="container">
+      <div class="row d-flex text-center justify-content-center my-5">
+        <h1>PROXIMOS CONCIERTOS DEL PAIS</h1>
+      </div>
+      <div class="row d-flex justify-content-center text-center">
+        <div class="banner_concert col-12 col-sm-12 col-md-12 col-lg-12">
+          <h2>the weekend</h2>
+          <img src="../img/the_Weekend_Banner.jpg" alt="banner the weekend" />
+        </div>
+        <div class="banner_concert col-12 col-sm-12 col-md-12 col-lg-12">
+          <h2>TAYLOR SWIFT</h2>
+          <img src="../img/taylor_banner.jpg" alt="banner taylor siwft" />
+        </div>
+        <div class="banner_concert col-12 col-sm-12 col-md-12 col-lg-12">
+          <h2>TAN BIONICA</h2>
+          <img src="../img/tan_bionica_banner.jpg" alt="banner tan bionica" />
+        </div>
+        <div class="banner_concert col-12 col-sm-12 col-md-12 col-lg-12">
+          <h2>AITANA</h2>
+          <img src="../img/aitana_banner.jpg" alt="banner aitana" />
+        </div>
+        <div class="banner_concert col-12 col-sm-12 col-md-12 col-lg-12">
+          <h2>LOLLAPALOOZA ARGENTINA</h2>
+          <img src="../img/lollapalooza_banner.jpg" alt="banner lollapalooza" />
+        </div>
+        <div class="banner_concert col-12 col-sm-12 col-md-12 col-lg-12">
+          <h2>ROGER WATERS</h2>
+          <img src="../img/roger_waters_banner.jpg" alt="banner roger waters" />
+        </div>
       </div>
     </div>
 
